kustomize/base/prometheus/alertmanager-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: alertmanager-tls
  labels:
    name: alertmanager
  name: alertmanager
spec:
  ports:
    - name: alertmanager-https
      port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    app: alertmanager
