kustomize/base/prometheus/prometheus-direct-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prometheus
  name: prometheus-direct
spec:
  ports:
    - name: prometheus-direct
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: prometheus
