kustomize/base/prometheus/prometheus-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/scheme: 'http'
    prometheus.io/port: '9090'
    service.alpha.openshift.io/serving-cert-secret-name: prometheus-tls
  labels:
    name: prometheus
  name: prometheus
spec:
  ports:
    - name: prometheus
      port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: prometheus
